# Electrical-rag-assistant

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  PROJECT_SCOPE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-app.txt  requirements-ocr.txt
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
alembic/versions/: 5d05177ed4e4_create_initial_schema.py  7b4c0bb0e8a5_extend_ingestion_jobs_for_worker.py  91f4c0ac933b_add_document_level_ingestion.py
docs/: CI_CD.md  EMBEDDING_STARTUP.md  LANGFUSE_TRACING.md  OBSERVABILITY.md  PUBLIC_RELEASE_CHECKLIST.md
evaluation/: README.md  benchmark_questions.json
frontend/: Dockerfile  app.js  index.html  nginx.conf  styles.css
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: electrical-rag-overview.json
src/electrical_rag/: __init__.py
src/electrical_rag/api/: __init__.py  app.py  schemas.py
src/electrical_rag/cache/: __init__.py  redis_cache.py
tests/: conftest.py  test_answer_postprocessing.py  test_api_request_id.py  test_chat_cache.py  test_chat_history_api.py  test_chat_repository.py  test_device_metadata.py  test_document_upload_api.py  test_evaluation_runner.py  test_frontend_assets.py  test_ingestion_jobs_api.py  test_ingestion_normalization.py  test_ingestion_tasks.py  test_langfuse_tracing.py  test_monitoring_assets.py  test_observability_logging.py  test_prompting.py  test_qa_service.py  test_qdrant_store.py  test_rate_limit.py  test_reranker.py  test_vector_backend_selection.py
(+35 files in other folders)
